# pyamda

./: .gitignore  README.md  pyamda.py  pyproject.toml
pyamda/: __main__.py  bools.py  clss.py  core.py  dicts.py  iters.py  lists.py  maths.py  strs.py
src/: __main__.py  booleans.py  classes.py  core.py  dictionaries.py  lists.py  maths.py  pyamda.py  strings.py
src/pyamda.egg-info/: PKG-INFO
