# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyamda"
version = "1.0.0"
description = "A functional utlity library inspired by Ramda.js"
readme = "README.md"
authors = [{ name = "Ellis Coon", email = "ellis.coon@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: GNU General Public License",
    "Programming Language :: Python :: 3",
]
keywords = ["functional", "fp", "ramda", "pipeline"]
dependencies = []
requires-python = ">=3.12"
